Change lint-staged arguments

--- a/package.json
+++ b/package.json
@@ -13,16 +13,13 @@
   },
   "lint-staged": {
     "*.js": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ],
     "*.jsx": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ],
     "*.tsx": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "dependencies": {
